<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardEvent"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:foreground="?android:selectableItemBackground"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="93dp"
            android:layout_height="84dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_local_hospital_24dp" />

        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/test_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_near_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="35dp"
            android:padding="10dp"
            android:text="@string/test_near_place" />

        <TextView
            android:id="@+id/event_place_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="55dp"
            android:padding="10dp"
            android:text="@string/test_phone"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEventInfo"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="90dp"
            android:text="@string/btn_info_title"
            android:textColor="@color/colorAccent" />

    </android.support.v7.widget.CardView>

</RelativeLayout>